fixed tables to work on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -287,7 +287,72 @@ input {
   padding-right: 0px;
 }
 
+/* tables */
 
+table#jleague_table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  font-family: Agenda-Light, sans-serif;
+  font-weight: 100;
+  background: #333;
+  color: #fff;
+  text-rendering: optimizeLegibility;
+  border-radius: 5px;
+}
+
+table#jleague_table caption {
+  font-size: 2rem;
+  color: #444;
+  margin: 1rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center left, center right;
+}
+
+table#jleague_table thead th {
+  font-weight: 600;
+}
+
+table#jleague_table thead th,
+table#jleague_table tbody td {
+  padding: .8rem;
+  font-size: 1.4rem;
+}
+
+table#jleague_table tbody td {
+  padding: .8rem;
+  font-size: 1.4rem;
+  color: #444;
+  background: #eee;
+}
+
+table#jleague_table tbody tr:not(:last-child) {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
+@media screen and (max-width: 600px) {
+  table#jleague_table caption {
+    background-image: none;
+  }
+  table#jleague_table thead {
+    display: none;
+  }
+  table#jleague_table tbody td {
+    display: block;
+    padding: .6rem;
+  }
+  table#jleague_table tbody tr td:first-child {
+    background: #666;
+    color: #fff;
+  }
+  table#jleague_table tbody td:before {
+    content: attr(data-th);
+    font-weight: bold;
+    display: inline-block;
+    width: 6rem;
+  }
+}
 
 
 /* users index */
